Implement file transfer between clients

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/alexyu132/quick-file#readme",
   "dependencies": {
     "aws-sdk": "^2.28.0",
-    "express": "^4.14.1"
+    "body-parser": "^1.17.1",
+    "express": "^4.14.1",
+    "socket.io": "^1.7.3"
   }
 }
