--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.28.0",
     "body-parser": "^1.17.1",
     "express": "^4.14.1",
+    "shortid": "^2.2.8",
     "socket.io": "^1.7.3"
   }
 }
